--- a/src/sass/partials/_saved-responses.scss
+++ b/src/sass/partials/_saved-responses.scss
@@ -12,7 +12,7 @@
   z-index: 10;
 }
 
-.saved-response-heading {
+.h2-saved-response {
   margin: 2% 0;
 }
 
